parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    IS
    NEW
    NULL
    OBJECT
    PONTO
    SIZEOF
    STATIC
    THIS
    newLine

Grammar

Rule 0     S' -> programa
Rule 1     programa -> secaoUsing defClasse
Rule 2     programa -> secaoUsing secaoNamespace
Rule 3     programa -> defClasse
Rule 4     programa -> secaoNamespace
Rule 5     secaoUsing -> USING ID PONTO_VIRGULA
Rule 6     secaoUsing -> USING ID PONTO_VIRGULA secaoUsing
Rule 7     secaoNamespace -> NAMESPACE ID CHAVE_L defClasse CHAVE_R
Rule 8     defClasse -> PUBLIC CLASS ID CHAVE_L CHAVE_R
Rule 9     defClasse -> CLASS ID CHAVE_L CHAVE_R
Rule 10    defClasse -> PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R
Rule 11    defClasse -> CLASS ID CHAVE_L corpoClasse CHAVE_R
Rule 12    defClasse -> PUBLIC CLASS ID CHAVE_L CHAVE_R defClasse
Rule 13    defClasse -> CLASS ID CHAVE_L CHAVE_R defClasse
Rule 14    defClasse -> CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse
Rule 15    defClasse -> PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse
Rule 16    corpoClasse -> atributo
Rule 17    corpoClasse -> atributo corpoClasse
Rule 18    corpoClasse -> assinatura
Rule 19    corpoClasse -> assinatura corpoClasse
Rule 20    atributo -> PUBLIC tipo atribuicao PONTO_VIRGULA
Rule 21    atributo -> tipo atribuicao PONTO_VIRGULA
Rule 22    atribuicao -> ID ATRIBUICAO ID
Rule 23    atribuicao -> ID ATRIBUICAO INT
Rule 24    atribuicao -> ID
Rule 25    atribuicao -> ID ATRIBUICAO chamadaMetodo
Rule 26    assinatura -> PUBLIC tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
Rule 27    assinatura -> tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
Rule 28    parametrosFormais -> tipo ID
Rule 29    parametrosFormais -> tipo ID VIRGULA parametrosFormais
Rule 30    corpoMetodo -> comandos
Rule 31    corpoMetodo -> comandos corpoMetodo
Rule 32    tipo -> INT
Rule 33    tipo -> STRING
Rule 34    tipo -> ID
Rule 35    tipo -> BOOL
Rule 36    chamadaMetodo -> ID PARENTESE_L parametrosReais PARENTESE_R
Rule 37    parametrosReais -> ID
Rule 38    parametrosReais -> ID VIRGULA parametrosReais
Rule 39    parametrosReais -> INT
Rule 40    parametrosReais -> INT VIRGULA parametrosReais
Rule 41    comandos -> comandos1
Rule 42    comandos -> comandos2
Rule 43    comandos1 -> for1
Rule 44    comandos1 -> foreach1
Rule 45    comandos1 -> while1
Rule 46    comandos1 -> return
Rule 47    comandos1 -> atributo
Rule 48    comandos1 -> IF PARENTESE_L exp1 PARENTESE_R comandos1 ELSE comandos1
Rule 49    comandos1 -> IF PARENTESE_L exp1 PARENTESE_R bloco ELSE comandos1
Rule 50    comandos1 -> IF PARENTESE_L exp1 PARENTESE_R comandos1 ELSE bloco
Rule 51    comandos1 -> IF PARENTESE_L exp1 PARENTESE_R bloco ELSE bloco
Rule 52    bloco -> CHAVE_L corpoComando CHAVE_R
Rule 53    bloco -> CHAVE_L CHAVE_R
Rule 54    comandos2 -> IF PARENTESE_L exp1 PARENTESE_R comandos
Rule 55    comandos2 -> IF PARENTESE_L exp1 PARENTESE_R comandos1 ELSE comandos2
Rule 56    comandos2 -> IF PARENTESE_L exp1 PARENTESE_R bloco
Rule 57    comandos2 -> IF PARENTESE_L exp1 PARENTESE_R bloco ELSE comandos2
Rule 58    comandos2 -> for2
Rule 59    comandos2 -> while2
Rule 60    comandos2 -> foreach2
Rule 61    corpoComando -> comandos
Rule 62    corpoComando -> corpoComando comandos
Rule 63    for1 -> FOR PARENTESE_L tipo atribuicao PONTO_VIRGULA exp1 PONTO_VIRGULA exp1 PARENTESE_R bloco
Rule 64    for1 -> FOR PARENTESE_L atribuicao PONTO_VIRGULA exp1 PONTO_VIRGULA exp1 PARENTESE_R bloco
Rule 65    for1 -> FOR PARENTESE_L tipo atribuicao PONTO_VIRGULA exp1 PONTO_VIRGULA exp1 PARENTESE_R comandos1
Rule 66    for1 -> FOR PARENTESE_L atribuicao PONTO_VIRGULA exp1 PONTO_VIRGULA exp1 PARENTESE_R comandos1
Rule 67    for2 -> FOR PARENTESE_L tipo atribuicao PONTO_VIRGULA exp1 PONTO_VIRGULA exp1 PARENTESE_R comandos2
Rule 68    for2 -> FOR PARENTESE_L atribuicao PONTO_VIRGULA exp1 PONTO_VIRGULA exp1 PARENTESE_R comandos2
Rule 69    while1 -> WHILE PARENTESE_L exp1 PARENTESE_R bloco
Rule 70    while1 -> WHILE PARENTESE_L exp1 PARENTESE_R comandos1
Rule 71    while2 -> WHILE PARENTESE_L exp1 PARENTESE_R comandos2
Rule 72    foreach1 -> FOREACH PARENTESE_L tipo ID IN ID PARENTESE_R bloco
Rule 73    foreach1 -> FOREACH PARENTESE_L ID IN ID PARENTESE_R bloco
Rule 74    foreach1 -> FOREACH PARENTESE_L tipo ID IN ID PARENTESE_R comandos1
Rule 75    foreach1 -> FOREACH PARENTESE_L ID IN ID PARENTESE_R comandos1
Rule 76    foreach2 -> FOREACH PARENTESE_L tipo ID IN ID PARENTESE_R comandos2
Rule 77    foreach2 -> FOREACH PARENTESE_L ID IN ID PARENTESE_R comandos2
Rule 78    return -> RETURN ID PONTO_VIRGULA
Rule 79    return -> RETURN INT PONTO_VIRGULA
Rule 80    return -> RETURN PONTO_VIRGULA
Rule 81    exp1 -> exp1 ATRIBUICAO exp2
Rule 82    exp1 -> exp2
Rule 83    exp2 -> exp2 OR exp3
Rule 84    exp2 -> exp3
Rule 85    exp3 -> exp3 AND exp4
Rule 86    exp3 -> exp4
Rule 87    exp4 -> exp4 BIT_OR exp5
Rule 88    exp4 -> exp5
Rule 89    exp5 -> exp5 XOR exp6
Rule 90    exp5 -> exp6
Rule 91    exp6 -> exp6 BIT_AND exp7
Rule 92    exp6 -> exp7
Rule 93    exp7 -> exp7 IGUAL exp8
Rule 94    exp7 -> exp7 DIFERENTE exp8
Rule 95    exp7 -> exp8
Rule 96    exp8 -> exp8 MENOR exp9
Rule 97    exp8 -> exp8 MENOR_IGUAL exp9
Rule 98    exp8 -> exp8 MAIOR exp9
Rule 99    exp8 -> exp8 MAIOR_IGUAL exp9
Rule 100   exp8 -> exp9
Rule 101   exp9 -> exp9 SOMA exp10
Rule 102   exp9 -> exp9 SUB exp10
Rule 103   exp9 -> exp10
Rule 104   exp10 -> exp10 MUL exp11
Rule 105   exp10 -> exp10 DIV exp11
Rule 106   exp10 -> exp11
Rule 107   exp11 -> BIT_NOT exp12
Rule 108   exp11 -> NOT exp12
Rule 109   exp11 -> exp12
Rule 110   exp12 -> exp12 INCREMENTO
Rule 111   exp12 -> exp12 DECREMENTO
Rule 112   exp12 -> exp13
Rule 113   exp13 -> TRUE
Rule 114   exp13 -> FALSE
Rule 115   exp13 -> STRING
Rule 116   exp13 -> ID
Rule 117   exp13 -> chamadaMetodo
Rule 118   exp13 -> INT
Rule 119   exp13 -> PARENTESE_L exp1 PARENTESE_R

Terminals, with rules where they appear

AND                  : 85
ATRIBUICAO           : 22 23 25 81
BIT_AND              : 91
BIT_NOT              : 107
BIT_OR               : 87
BOOL                 : 35
CHAVE_L              : 7 8 9 10 11 12 13 14 15 52 53
CHAVE_R              : 7 8 9 10 11 12 13 14 15 52 53
CLASS                : 8 9 10 11 12 13 14 15
COMMENT              : 
DECREMENTO           : 111
DIFERENTE            : 94
DIV                  : 105
ELSE                 : 48 49 50 51 55 57
FALSE                : 114
FOR                  : 63 64 65 66 67 68
FOREACH              : 72 73 74 75 76 77
ID                   : 5 6 7 8 9 10 11 12 13 14 15 22 22 23 24 25 26 27 28 29 34 36 37 38 72 72 73 73 74 74 75 75 76 76 77 77 78 116
IF                   : 48 49 50 51 54 55 56 57
IGUAL                : 93
IN                   : 72 73 74 75 76 77
INCREMENTO           : 110
INT                  : 23 32 39 40 79 118
IS                   : 
MAIOR                : 98
MAIOR_IGUAL          : 99
MENOR                : 96
MENOR_IGUAL          : 97
MUL                  : 104
NAMESPACE            : 7
NEW                  : 
NOT                  : 108
NULL                 : 
OBJECT               : 
OR                   : 83
PARENTESE_L          : 26 27 36 48 49 50 51 54 55 56 57 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 119
PARENTESE_R          : 26 27 36 48 49 50 51 54 55 56 57 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 119
PONTO                : 
PONTO_VIRGULA        : 5 6 20 21 63 63 64 64 65 65 66 66 67 67 68 68 78 79 80
PUBLIC               : 8 10 12 15 20 26
RETURN               : 78 79 80
SIZEOF               : 
SOMA                 : 101
STATIC               : 
STRING               : 33 115
SUB                  : 102
THIS                 : 
TRUE                 : 113
USING                : 5 6
VIRGULA              : 29 38 40
WHILE                : 69 70 71
XOR                  : 89
error                : 
newLine              : 

Nonterminals, with rules where they appear

assinatura           : 18 19
atribuicao           : 20 21 63 64 65 66 67 68
atributo             : 16 17 47
bloco                : 26 27 49 50 51 51 56 57 63 64 69 72 73
chamadaMetodo        : 25 117
comandos             : 30 31 54 61 62
comandos1            : 41 48 48 49 50 55 65 66 70 74 75
comandos2            : 42 55 57 67 68 71 76 77
corpoClasse          : 10 11 14 15 17 19
corpoComando         : 52 62
corpoMetodo          : 31
defClasse            : 1 3 7 12 13 14 15
exp1                 : 48 49 50 51 54 55 56 57 63 63 64 64 65 65 66 66 67 67 68 68 69 70 71 81 119
exp10                : 101 102 103 104 105
exp11                : 104 105 106
exp12                : 107 108 109 110 111
exp13                : 112
exp2                 : 81 82 83
exp3                 : 83 84 85
exp4                 : 85 86 87
exp5                 : 87 88 89
exp6                 : 89 90 91
exp7                 : 91 92 93 94
exp8                 : 93 94 95 96 97 98 99
exp9                 : 96 97 98 99 100 101 102
for1                 : 43
for2                 : 58
foreach1             : 44
foreach2             : 60
parametrosFormais    : 26 27 29
parametrosReais      : 36 38 40
programa             : 0
return               : 46
secaoNamespace       : 2 4
secaoUsing           : 1 2 6
tipo                 : 20 21 26 27 28 29 63 65 67 72 74 76
while1               : 45
while2               : 59

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . secaoUsing defClasse
    (2) programa -> . secaoUsing secaoNamespace
    (3) programa -> . defClasse
    (4) programa -> . secaoNamespace
    (5) secaoUsing -> . USING ID PONTO_VIRGULA
    (6) secaoUsing -> . USING ID PONTO_VIRGULA secaoUsing
    (8) defClasse -> . PUBLIC CLASS ID CHAVE_L CHAVE_R
    (9) defClasse -> . CLASS ID CHAVE_L CHAVE_R
    (10) defClasse -> . PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R
    (11) defClasse -> . CLASS ID CHAVE_L corpoClasse CHAVE_R
    (12) defClasse -> . PUBLIC CLASS ID CHAVE_L CHAVE_R defClasse
    (13) defClasse -> . CLASS ID CHAVE_L CHAVE_R defClasse
    (14) defClasse -> . CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse
    (15) defClasse -> . PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse
    (7) secaoNamespace -> . NAMESPACE ID CHAVE_L defClasse CHAVE_R

    USING           shift and go to state 5
    PUBLIC          shift and go to state 6
    CLASS           shift and go to state 7
    NAMESPACE       shift and go to state 8

    programa                       shift and go to state 1
    secaoUsing                     shift and go to state 2
    defClasse                      shift and go to state 3
    secaoNamespace                 shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> secaoUsing . defClasse
    (2) programa -> secaoUsing . secaoNamespace
    (8) defClasse -> . PUBLIC CLASS ID CHAVE_L CHAVE_R
    (9) defClasse -> . CLASS ID CHAVE_L CHAVE_R
    (10) defClasse -> . PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R
    (11) defClasse -> . CLASS ID CHAVE_L corpoClasse CHAVE_R
    (12) defClasse -> . PUBLIC CLASS ID CHAVE_L CHAVE_R defClasse
    (13) defClasse -> . CLASS ID CHAVE_L CHAVE_R defClasse
    (14) defClasse -> . CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse
    (15) defClasse -> . PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse
    (7) secaoNamespace -> . NAMESPACE ID CHAVE_L defClasse CHAVE_R

    PUBLIC          shift and go to state 6
    CLASS           shift and go to state 7
    NAMESPACE       shift and go to state 8

    defClasse                      shift and go to state 9
    secaoNamespace                 shift and go to state 10

state 3

    (3) programa -> defClasse .

    $end            reduce using rule 3 (programa -> defClasse .)


state 4

    (4) programa -> secaoNamespace .

    $end            reduce using rule 4 (programa -> secaoNamespace .)


state 5

    (5) secaoUsing -> USING . ID PONTO_VIRGULA
    (6) secaoUsing -> USING . ID PONTO_VIRGULA secaoUsing

    ID              shift and go to state 11


state 6

    (8) defClasse -> PUBLIC . CLASS ID CHAVE_L CHAVE_R
    (10) defClasse -> PUBLIC . CLASS ID CHAVE_L corpoClasse CHAVE_R
    (12) defClasse -> PUBLIC . CLASS ID CHAVE_L CHAVE_R defClasse
    (15) defClasse -> PUBLIC . CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse

    CLASS           shift and go to state 12


state 7

    (9) defClasse -> CLASS . ID CHAVE_L CHAVE_R
    (11) defClasse -> CLASS . ID CHAVE_L corpoClasse CHAVE_R
    (13) defClasse -> CLASS . ID CHAVE_L CHAVE_R defClasse
    (14) defClasse -> CLASS . ID CHAVE_L corpoClasse CHAVE_R defClasse

    ID              shift and go to state 13


state 8

    (7) secaoNamespace -> NAMESPACE . ID CHAVE_L defClasse CHAVE_R

    ID              shift and go to state 14


state 9

    (1) programa -> secaoUsing defClasse .

    $end            reduce using rule 1 (programa -> secaoUsing defClasse .)


state 10

    (2) programa -> secaoUsing secaoNamespace .

    $end            reduce using rule 2 (programa -> secaoUsing secaoNamespace .)


state 11

    (5) secaoUsing -> USING ID . PONTO_VIRGULA
    (6) secaoUsing -> USING ID . PONTO_VIRGULA secaoUsing

    PONTO_VIRGULA   shift and go to state 15


state 12

    (8) defClasse -> PUBLIC CLASS . ID CHAVE_L CHAVE_R
    (10) defClasse -> PUBLIC CLASS . ID CHAVE_L corpoClasse CHAVE_R
    (12) defClasse -> PUBLIC CLASS . ID CHAVE_L CHAVE_R defClasse
    (15) defClasse -> PUBLIC CLASS . ID CHAVE_L corpoClasse CHAVE_R defClasse

    ID              shift and go to state 16


state 13

    (9) defClasse -> CLASS ID . CHAVE_L CHAVE_R
    (11) defClasse -> CLASS ID . CHAVE_L corpoClasse CHAVE_R
    (13) defClasse -> CLASS ID . CHAVE_L CHAVE_R defClasse
    (14) defClasse -> CLASS ID . CHAVE_L corpoClasse CHAVE_R defClasse

    CHAVE_L         shift and go to state 17


state 14

    (7) secaoNamespace -> NAMESPACE ID . CHAVE_L defClasse CHAVE_R

    CHAVE_L         shift and go to state 18


state 15

    (5) secaoUsing -> USING ID PONTO_VIRGULA .
    (6) secaoUsing -> USING ID PONTO_VIRGULA . secaoUsing
    (5) secaoUsing -> . USING ID PONTO_VIRGULA
    (6) secaoUsing -> . USING ID PONTO_VIRGULA secaoUsing

    PUBLIC          reduce using rule 5 (secaoUsing -> USING ID PONTO_VIRGULA .)
    CLASS           reduce using rule 5 (secaoUsing -> USING ID PONTO_VIRGULA .)
    NAMESPACE       reduce using rule 5 (secaoUsing -> USING ID PONTO_VIRGULA .)
    USING           shift and go to state 5

    secaoUsing                     shift and go to state 19

state 16

    (8) defClasse -> PUBLIC CLASS ID . CHAVE_L CHAVE_R
    (10) defClasse -> PUBLIC CLASS ID . CHAVE_L corpoClasse CHAVE_R
    (12) defClasse -> PUBLIC CLASS ID . CHAVE_L CHAVE_R defClasse
    (15) defClasse -> PUBLIC CLASS ID . CHAVE_L corpoClasse CHAVE_R defClasse

    CHAVE_L         shift and go to state 20


state 17

    (9) defClasse -> CLASS ID CHAVE_L . CHAVE_R
    (11) defClasse -> CLASS ID CHAVE_L . corpoClasse CHAVE_R
    (13) defClasse -> CLASS ID CHAVE_L . CHAVE_R defClasse
    (14) defClasse -> CLASS ID CHAVE_L . corpoClasse CHAVE_R defClasse
    (16) corpoClasse -> . atributo
    (17) corpoClasse -> . atributo corpoClasse
    (18) corpoClasse -> . assinatura
    (19) corpoClasse -> . assinatura corpoClasse
    (20) atributo -> . PUBLIC tipo atribuicao PONTO_VIRGULA
    (21) atributo -> . tipo atribuicao PONTO_VIRGULA
    (26) assinatura -> . PUBLIC tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
    (27) assinatura -> . tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
    (32) tipo -> . INT
    (33) tipo -> . STRING
    (34) tipo -> . ID
    (35) tipo -> . BOOL

    CHAVE_R         shift and go to state 22
    PUBLIC          shift and go to state 26
    INT             shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 21
    BOOL            shift and go to state 30

    corpoClasse                    shift and go to state 23
    atributo                       shift and go to state 24
    assinatura                     shift and go to state 25
    tipo                           shift and go to state 27

state 18

    (7) secaoNamespace -> NAMESPACE ID CHAVE_L . defClasse CHAVE_R
    (8) defClasse -> . PUBLIC CLASS ID CHAVE_L CHAVE_R
    (9) defClasse -> . CLASS ID CHAVE_L CHAVE_R
    (10) defClasse -> . PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R
    (11) defClasse -> . CLASS ID CHAVE_L corpoClasse CHAVE_R
    (12) defClasse -> . PUBLIC CLASS ID CHAVE_L CHAVE_R defClasse
    (13) defClasse -> . CLASS ID CHAVE_L CHAVE_R defClasse
    (14) defClasse -> . CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse
    (15) defClasse -> . PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse

    PUBLIC          shift and go to state 6
    CLASS           shift and go to state 7

    defClasse                      shift and go to state 31

state 19

    (6) secaoUsing -> USING ID PONTO_VIRGULA secaoUsing .

    PUBLIC          reduce using rule 6 (secaoUsing -> USING ID PONTO_VIRGULA secaoUsing .)
    CLASS           reduce using rule 6 (secaoUsing -> USING ID PONTO_VIRGULA secaoUsing .)
    NAMESPACE       reduce using rule 6 (secaoUsing -> USING ID PONTO_VIRGULA secaoUsing .)


state 20

    (8) defClasse -> PUBLIC CLASS ID CHAVE_L . CHAVE_R
    (10) defClasse -> PUBLIC CLASS ID CHAVE_L . corpoClasse CHAVE_R
    (12) defClasse -> PUBLIC CLASS ID CHAVE_L . CHAVE_R defClasse
    (15) defClasse -> PUBLIC CLASS ID CHAVE_L . corpoClasse CHAVE_R defClasse
    (16) corpoClasse -> . atributo
    (17) corpoClasse -> . atributo corpoClasse
    (18) corpoClasse -> . assinatura
    (19) corpoClasse -> . assinatura corpoClasse
    (20) atributo -> . PUBLIC tipo atribuicao PONTO_VIRGULA
    (21) atributo -> . tipo atribuicao PONTO_VIRGULA
    (26) assinatura -> . PUBLIC tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
    (27) assinatura -> . tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
    (32) tipo -> . INT
    (33) tipo -> . STRING
    (34) tipo -> . ID
    (35) tipo -> . BOOL

    CHAVE_R         shift and go to state 32
    PUBLIC          shift and go to state 26
    INT             shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 21
    BOOL            shift and go to state 30

    corpoClasse                    shift and go to state 33
    atributo                       shift and go to state 24
    assinatura                     shift and go to state 25
    tipo                           shift and go to state 27

state 21

    (34) tipo -> ID .

    ID              reduce using rule 34 (tipo -> ID .)


state 22

    (9) defClasse -> CLASS ID CHAVE_L CHAVE_R .
    (13) defClasse -> CLASS ID CHAVE_L CHAVE_R . defClasse
    (8) defClasse -> . PUBLIC CLASS ID CHAVE_L CHAVE_R
    (9) defClasse -> . CLASS ID CHAVE_L CHAVE_R
    (10) defClasse -> . PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R
    (11) defClasse -> . CLASS ID CHAVE_L corpoClasse CHAVE_R
    (12) defClasse -> . PUBLIC CLASS ID CHAVE_L CHAVE_R defClasse
    (13) defClasse -> . CLASS ID CHAVE_L CHAVE_R defClasse
    (14) defClasse -> . CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse
    (15) defClasse -> . PUBLIC CLASS ID CHAVE_L corpoClasse CHAVE_R defClasse

    $end            reduce using rule 9 (defClasse -> CLASS ID CHAVE_L CHAVE_R .)
    CHAVE_R         reduce using rule 9 (defClasse -> CLASS ID CHAVE_L CHAVE_R .)
    PUBLIC          shift and go to state 6
    CLASS           shift and go to state 7

    defClasse                      shift and go to state 34

state 23

    (11) defClasse -> CLASS ID CHAVE_L corpoClasse . CHAVE_R
    (14) defClasse -> CLASS ID CHAVE_L corpoClasse . CHAVE_R defClasse

    CHAVE_R         shift and go to state 35


state 24

    (16) corpoClasse -> atributo .
    (17) corpoClasse -> atributo . corpoClasse
    (16) corpoClasse -> . atributo
    (17) corpoClasse -> . atributo corpoClasse
    (18) corpoClasse -> . assinatura
    (19) corpoClasse -> . assinatura corpoClasse
    (20) atributo -> . PUBLIC tipo atribuicao PONTO_VIRGULA
    (21) atributo -> . tipo atribuicao PONTO_VIRGULA
    (26) assinatura -> . PUBLIC tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
    (27) assinatura -> . tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
    (32) tipo -> . INT
    (33) tipo -> . STRING
    (34) tipo -> . ID
    (35) tipo -> . BOOL

    CHAVE_R         reduce using rule 16 (corpoClasse -> atributo .)
    PUBLIC          shift and go to state 26
    INT             shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 21
    BOOL            shift and go to state 30

    atributo                       shift and go to state 24
    corpoClasse                    shift and go to state 36
    assinatura                     shift and go to state 25
    tipo                           shift and go to state 27

state 25

    (18) corpoClasse -> assinatura .
    (19) corpoClasse -> assinatura . corpoClasse
    (16) corpoClasse -> . atributo
    (17) corpoClasse -> . atributo corpoClasse
    (18) corpoClasse -> . assinatura
    (19) corpoClasse -> . assinatura corpoClasse
    (20) atributo -> . PUBLIC tipo atribuicao PONTO_VIRGULA
    (21) atributo -> . tipo atribuicao PONTO_VIRGULA
    (26) assinatura -> . PUBLIC tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
    (27) assinatura -> . tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
    (32) tipo -> . INT
    (33) tipo -> . STRING
    (34) tipo -> . ID
    (35) tipo -> . BOOL

    CHAVE_R         reduce using rule 18 (corpoClasse -> assinatura .)
    PUBLIC          shift and go to state 26
    INT             shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 21
    BOOL            shift and go to state 30

    assinatura                     shift and go to state 25
    corpoClasse                    shift and go to state 37
    atributo                       shift and go to state 24
    tipo                           shift and go to state 27

state 26

    (20) atributo -> PUBLIC . tipo atribuicao PONTO_VIRGULA
    (26) assinatura -> PUBLIC . tipo ID PARENTESE_L parametrosFormais PARENTESE_R bloco
    (32) tipo -> . INT
    (33) tipo -> . STRING
    (34) tipo -> . ID
    (35) tipo -> . BOOL

    INT             shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 21
    BOOL            shift and go to state 30

    tipo                           shift and go to state 38

state 27
